--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "chakra-react-select": "^4.2.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.2.1",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.1",
     "react-icons": "^4.4.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
@@ -29,7 +31,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "dev": "PORT=3005 react-scripts start",
+    "dev": "PORT=3010 react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -52,5 +54,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
