--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
     "chakra-react-select": "^4.2.2",
+    "chakra-ui-steps": "^1.8.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.2.1",
     "js-file-download": "^0.4.12",
