--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "formik": "^2.2.9",
     "framer-motion": "^7.2.1",
     "js-file-download": "^0.4.12",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.1",
     "react-icons": "^4.4.0",
+    "react-number-format": "^5.1.2",
     "react-paginate": "^8.1.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
